--- a/WebAppService/Areas/Admin/Views/Home/HomePage1.cshtml
+++ b/WebAppService/Areas/Admin/Views/Home/HomePage1.cshtml
@@ -10,7 +10,7 @@
 }
 <div class="col-md-12">
     <div class="card">
-        <div class="card-header p-2 text-bg-info d-flex align-items-center">
+        <div class="card-header p-2 bg-dark-admin d-flex align-items-center">
             <h4 class="card-title text-white mb-0 fs-3">Giao diện seo 1</h4>
         </div>
         <div class="card-body p-0 collapse show">
