--- a/WebAppService/Areas/Admin/Views/Login/Login.cshtml
+++ b/WebAppService/Areas/Admin/Views/Login/Login.cshtml
@@ -11,7 +11,7 @@
 	<!-- Required meta tags -->
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<!-- Favicon icon-->
 	<link rel="shortcut icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/9187/9187604.png" />
 	<!-- Core Css -->
@@ -25,7 +25,7 @@
 			width: 100%;
 			background-size: cover;
 			opacity: 0.9;
-			background-image: url("/root/medical-background.jpg");
+			background-image: url("/root/bg-medical.jpg");
 			animation: 15sease 0s infinite normal none running gradient;
 		}
 
@@ -53,7 +53,7 @@
 			height: var(--bs-card-height);
 			color: var(--bs-body-color);
 			word-wrap: break-word;
-			background-color: #00000078;
+			background-color: #000000d4;
 			background-clip: border-box;
 			border: var(--bs-card-border-width) solid #090a0b;
 			border-radius: var(--bs-card-border-radius);
