--- a/WebAppService/Views/Shared/_ClientMenu.cshtml
+++ b/WebAppService/Views/Shared/_ClientMenu.cshtml
@@ -62,7 +62,7 @@
                     </li>
                     <li class="cat-item txt-mobile col-12 p-0">
                         <a href="#" style="padding: 0px;
-    margin: 0px;">Chọn Ngôn Ngữ</a>
+                      margin: 0px;">Chọn Ngôn Ngữ</a>
                     </li>
                     <li class="cat-item txt-mobile col-12 p-0" style="display: flex;display: flex;width: 100%;margin-left: 0px;margin-top: 11px;">
                         <a href="#" class="translate-btn m-0 p-0" data-lang="vi"> <img src="https://flagcdn.com/vn.svg" class="ml-0 img-fluid icon-langue" alt="Vietnam"></a>
@@ -71,7 +71,7 @@
                         <a href="#" class="translate-btn m-0 p-0" data-lang="zh-CN"> <img src="https://flagcdn.com/tw.svg" class="ml-3 img-fluid icon-langue" alt="Chinese"></a>
                         <a href="#" class="translate-btn m-0 p-0" data-lang="en"> <img src="https://flagcdn.com/gb.svg" class="ml-3 img-fluid icon-langue3" alt="English"></a>
                     </li>
-                    <li class="mt-20 mb-20" style="justify-self: left;margin: 0px !important;">
+                    <li style="display: flex; justify-content: flex-start; margin: 0px !important;">
                         <svg width="100" height="41" viewBox="0 0 152 41" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect width="152" height="41" rx="5" fill="#F26522" />
                             <path d="M24 28C27.866 28 31 24.866 31 21C31 17.134 27.866 14 24 14C20.134 14 17 17.134 17 21C17 24.866 20.134 28 24 28Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
@@ -80,7 +80,7 @@
                         </svg>
                     </li>
                     <li class="cat-item txt-mobile col-12 p-0">
-                        <a href="#">
+                        <a href="#" style="font-weight: 500 !important;font-family: 'Inter';">
                             <svg width="14" height="19" viewBox="0 0 14 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M6.15625 17.8281C4.32812 15.543 0.25 10.0938 0.25 7C0.25 3.27344 3.23828 0.25 7 0.25C10.7266 0.25 13.75 3.27344 13.75 7C13.75 10.0938 9.63672 15.543 7.80859 17.8281C7.38672 18.3555 6.57812 18.3555 6.15625 17.8281ZM7 9.25C8.23047 9.25 9.25 8.26562 9.25 7C9.25 5.76953 8.23047 4.75 7 4.75C5.73438 4.75 4.75 5.76953 4.75 7C4.75 8.26562 5.73438 9.25 7 9.25Z" fill="#FAFAFA" />
                             </svg>
@@ -88,7 +88,7 @@
                         </a>
                     </li>
                     <li class="cat-item txt-mobile col-12 p-0">
-                        <a href="#">
+                        <a href="#" style="font-weight: 500 !important;font-family: 'Inter';">
                             <svg width="18" height="14" viewBox="0 0 18 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M16.3125 0.5C17.2266 0.5 18 1.27344 18 2.1875C18 2.75 17.7188 3.24219 17.2969 3.55859L9.66797 9.28906C9.24609 9.60547 8.71875 9.60547 8.29688 9.28906L0.667969 3.55859C0.246094 3.24219 0 2.75 0 2.1875C0 1.27344 0.738281 0.5 1.6875 0.5H16.3125ZM7.62891 10.2031C8.4375 10.8008 9.52734 10.8008 10.3359 10.2031L18 4.4375V11.75C18 13.0156 16.9805 14 15.75 14H2.25C0.984375 14 0 13.0156 0 11.75V4.4375L7.62891 10.2031Z" fill="#FAFAFA" />
                             </svg>
@@ -96,7 +96,7 @@
                         </a>
                     </li>
                     <li class="cat-item txt-mobile col-12 p-0">
-                        <a href="#">
+                        <a href="#" style="font-weight: 500 !important;font-family: 'Inter';">
                             <svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M17.9648 13.8555L17.1211 17.4062C17.0156 17.9336 16.5938 18.2852 16.0664 18.2852C7.20703 18.25 0 11.043 0 2.18359C0 1.65625 0.316406 1.23438 0.84375 1.12891L4.39453 0.285156C4.88672 0.179688 5.41406 0.460938 5.625 0.917969L7.27734 4.75C7.45312 5.20703 7.34766 5.73438 6.96094 6.01562L5.0625 7.5625C6.25781 9.98828 8.22656 11.957 10.6875 13.1523L12.2344 11.2539C12.5156 10.9023 13.043 10.7617 13.5 10.9375L17.332 12.5898C17.7891 12.8359 18.0703 13.3633 17.9648 13.8555Z" fill="#FAFAFA" />
                             </svg>
