--- a/WebAppService/Areas/Admin/Views/Shared/_MoldunLeftSideBar.cshtml
+++ b/WebAppService/Areas/Admin/Views/Shared/_MoldunLeftSideBar.cshtml
@@ -7,7 +7,7 @@
             <a href="#" class="text-nowrap logo-img col-sm-12">
                 <div class="col-sm-12">
                     <div class="fixed-profile p-3 pt-2 mx-0 mb-2 bg-secondary-subtle rounded mt-0">
-                        <div class="hstack gap-3">
+                        <div class="hstack gap-4">
                             <div class="john-img">
                                 <img src="~/root/icon.png" class="rounded-circle" width="40" height="40" alt="modernize-img" />
                             </div>
@@ -36,13 +36,8 @@
                     </div>
                 </div>
             </a>
-
-            <a href="javascript:void(0)" class="sidebartoggler ms-auto text-decoration-none fs-5 d-block d-xl-none">
-                <i class="ti ti-x"></i>
-            </a>
         </div>
         <nav class="sidebar-nav scroll-sidebar" data-simplebar>
-
             <ul id="sidebarnav">
                 <li class="nav-small-cap m-0">
                     <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
@@ -56,7 +51,7 @@
                 <li class="sidebar-item">
                     <a class="sidebar-link has-arrow" href="javascript:void(0)" aria-expanded="false">
                         <span class="d-flex">
-                            <iconify-icon icon="solar:home-2-linear" class="text-danger" width="20px" height="20px"></iconify-icon>
+                            <iconify-icon icon="solar:home-2-linear" class="text-Dark" width="20px" height="20px"></iconify-icon>
                         </span>
                         <span class="hide-menu">Cấu hình trang chính</span>
                     </a>
@@ -98,7 +93,7 @@
                 <li class="sidebar-item">
                     <a class="sidebar-link" href="/Admin/DanhSachNhanSu/DanhSachNhanSu" id="get-url" aria-expanded="false">
                         <span>
-                            <iconify-icon icon="solar:users-group-rounded-line-duotone" class="text-primary" width="20px" height="20px"></iconify-icon>
+                            <iconify-icon icon="solar:users-group-rounded-line-duotone" class="text-Dark" width="20px" height="20px"></iconify-icon>
                         </span>
                         <span class="hide-menu">Danh sách nhân sự</span>
                     </a>
@@ -106,7 +101,7 @@
                 <li class="sidebar-item">
                     <a class="sidebar-link" href="/Admin/TinTucBaiViet/TinTucBaiViet" id="get-url" aria-expanded="false">
                         <span>
-                            <iconify-icon icon="solar:pen-new-square-broken" class="text-primary" width="20px" height="20px"></iconify-icon>
+                            <iconify-icon icon="solar:pen-new-square-broken" class="text-Dark" width="20px" height="20px"></iconify-icon>
                         </span>
                         <span class="hide-menu">Tin tức,Bài viết</span>
                     </a>
@@ -114,7 +109,7 @@
                 <li class="sidebar-item">
                     <a class="sidebar-link" href="/Admin/DichVu/DichVu" id="get-url" aria-expanded="false">
                         <span>
-                            <iconify-icon icon="solar:pen-new-square-broken" class="text-primary" width="20px" height="20px"></iconify-icon>
+                            <iconify-icon icon="solar:maximize-square-3-linear" class="text-Dark" width="20px" height="20px"></iconify-icon>
                         </span>
                         <span class="hide-menu">Dịch vụ chuyên khoa</span>
                     </a>
@@ -122,7 +117,7 @@
                 <li class="sidebar-item">
                     <a class="sidebar-link" href="/Admin/FAQS/FAQS" id="get-url" aria-expanded="false">
                         <span>
-                            <iconify-icon icon="solar:pen-new-square-broken" class="text-primary" width="20px" height="20px"></iconify-icon>
+                            <iconify-icon icon="solar:info-circle-broken" class="text-Dark" width="20px" height="20px"></iconify-icon>
                         </span>
                         <span class="hide-menu">FAQS</span>
                     </a>
@@ -130,7 +125,7 @@
                 <li class="sidebar-item">
                     <a class="sidebar-link" href="/Admin/AboutUs/AboutUs" id="get-url" aria-expanded="false">
                         <span>
-                            <iconify-icon icon="solar:pen-new-square-broken" class="text-primary" width="20px" height="20px"></iconify-icon>
+                            <iconify-icon icon="solar:accessibility-outline" class="text-Dark" width="20px" height="20px"></iconify-icon>
                         </span>
                         <span class="hide-menu">Về chúng tôi</span>
                     </a>
@@ -157,6 +152,30 @@
                                     <i class="ti ti-circle"></i>
                                 </div>
                                 <span class="hide-menu">Cấu hình danh mục</span>
+                            </a>
+                        </li>
+                        <li class="sidebar-item">
+                            <a href="/Admin/DanhMucHeThong/NhomBaiViet" class="sidebar-link">
+                                <div class="round-16 d-flex align-items-center justify-content-center">
+                                    <i class="ti ti-circle"></i>
+                                </div>
+                                <span class="hide-menu">Cấu hình nhóm bài viết</span>
+                            </a>
+                        </li>
+                        <li class="sidebar-item">
+                            <a href="/Admin/DanhMucHeThong/DichVuChuyenKhoa" class="sidebar-link">
+                                <div class="round-16 d-flex align-items-center justify-content-center">
+                                    <i class="ti ti-circle"></i>
+                                </div>
+                                <span class="hide-menu">Cấu hình chuyên khoa</span>
+                            </a>
+                        </li>
+                        <li class="sidebar-item">
+                            <a href="/Admin/DanhMucHeThong/CoSoLamViec" class="sidebar-link">
+                                <div class="round-16 d-flex align-items-center justify-content-center">
+                                    <i class="ti ti-circle"></i>
+                                </div>
+                                <span class="hide-menu">Cấu hình Cơ Sở làm việc</span>
                             </a>
                         </li>
                     @*     <li class="sidebar-item">
