--- a/WebAppService/Views/Home/Index.cshtml
+++ b/WebAppService/Views/Home/Index.cshtml
@@ -79,10 +79,7 @@
                   });
               },
         };
-        
-        $(document).ready(function () {
-              myClient.init();
-        });
+       myClient.init();
     </script>
 }
 <div id="_layout1"></div>
@@ -128,7 +125,7 @@
         <div class="archive-header text-center mb-30 mt-10">
             <div class="container">
                 <div>
-                    <span class="text-head-breadcrumb text-ic-5">Dịch Vụ đặc biệt</span>
+                    <span class="text-head-breadcrumb text-ic-5 text-up text-uppercase">Dịch Vụ đặc biệt</span>
                 </div>
                 <p class="text-ics-5 mb-4 text-center">
                     Chúng tôi cung cấp các dịch vụ tốt nhất với đội ngũ y tế tốt nhất!
@@ -138,25 +135,25 @@
         <div class="row" id="sp_sv">
         </div>
         <div class="for-more pagination-area mb-30" style="color:#234A6B; font-family:Manrope;font-weight:700">
-            <a href="#">Xem thêm ></a>
+            <a href="/Service/ServiceList">Xem thêm ></a>
         </div>
     </div>
 </div>
 
 <!-- tại sao chọn chúng tôi -->
 <div class="question-doctor" style="background:#F9FCFF">
-    <div class="container pt-30 pb-100 pl-30 pl-md-0">
+    <div class="container pt-30 pb-30 pl-30 pl-md-0">
         <div class="row align-items-center">
             <!-- Bên trái: nội dung lý do -->
             <div class="col-md-12">
-                <div class="text-center">
+                <div class="text-center mb-2">
                     <span class="text-head-breadcrumb text-ic-5">Tại sao <span class="text-primary-grd">chọn chúng tôi</span></span>
                 </div>
                 <p class="text-muted mb-4 text-center text-inter">
                     Chúng tôi tự hào là nơi hội tụ đội ngũ y bác sĩ tận tâm, trang thiết bị hiện đại và quy trình chăm sóc đạt chuẩn quốc tế – mang đến cho bạn sự an tâm tuyệt đối trong suốt hành trình bảo vệ và chăm sóc sức khỏe.
                 </p>
             </div>
-            <div class="col-lg-7 col-md-12  order-2 order-md-1">
+            <div class="col-lg-7 col-md-12  order-2 order-md-1 mobile-mt-10">
                 <!-- Lý do 1 -->
                 <div class="d-flex mb-4">
                     <div class="me-3">
@@ -212,9 +209,9 @@
 </div>
 
 <!-- Câu chuyện của khách hàng -->
-<div class="message-client">
+<div class="message-client" style="margin-top:-20px">
     <div class="container px-30 py-2 container-mobile">
-        <div class="archive-header text-center mb-30 mt-10">
+        <div class="archive-header text-center mb-20 mt-0">
             <div class="container">
                 <div>
                     <span class="text-head-breadcrumb text-ic-5"><span class="text-primary">Câu chuyện</span> của khách hàng</span>
@@ -377,7 +374,7 @@
         <div class="row align-items-center">
             <div class="col-md-12">
                 <div class="text-start">
-                    <span class="text-head-breadcrumb text-c-5">Báo chí <span class="text-primary">nói gì về Sun Medical</span></span>
+                    <span class="text-head-breadcrumb text-ic-5">Báo chí <span class="text-primary">nói gì về Sun Medical</span></span>
                 </div>
             </div>
             <div class="row mt-30">
@@ -398,7 +395,7 @@
         <div class="row align-items-center">
             <div class="col-md-12">
                 <div class="text-start">
-                    <span class="text-head-breadcrumb text-c-5">Video nổi bật</span>
+                    <span class="text-head-breadcrumb text-ic-5">Video nổi bật</span>
                 </div>
             </div>
             <div class="row mt-30">
