--- a/WebAppService/wwwroot/web/assets/css/service.css
+++ b/WebAppService/wwwroot/web/assets/css/service.css
@@ -100,7 +100,7 @@ h2 {
 
 .related-services {
     margin: 0 auto;
-    padding: 20px 70px;
+    padding: 20px 18px 20px 39px;
     position: relative;
 }
 
@@ -145,8 +145,8 @@ h2 {
     background: #f26522;
     border: none;
     border-radius: 50%;
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     color: white;
     font-size: 20px;
     cursor: pointer;
