--- a/WebAppService/Views/Blog/Blog.cshtml
+++ b/WebAppService/Views/Blog/Blog.cshtml
@@ -77,13 +77,13 @@
     </div>
 </div>
 <div class="container px-30 py-2 container-mobile">
-    <div class="archive-header text-center mb-30 mt-10">
+    <div class="archive-header text-center mb-20 mt-10">
         <div class="container">
             <div class="breadcrumb">
                 <span class="no-arrow text-c-0">Bài viết</span>
             </div>
             <div>
-                <span class="text-head-breadcrumb text-c-5">Tin tức</span>
+                <span class="text-head-breadcrumb text-ic-5">Tin tức</span>
             </div>
         </div>
     </div>
