--- a/WebAppService/Views/Home/Index - Copy.cshtml
+++ b/WebAppService/Views/Home/Index - Copy.cshtml
@@ -40,7 +40,7 @@
                     <h3>
                         <span class="vcard author">
                             <span class="fn">
-                                <a href="author.html" title="" rel="author" class="author-info-text">Bệnh viện hiện đại Dịch vụ chuẩn quốc tế</a>
+                                <a href="author.html" title="" rel="author" class="author-info-text">Bệnh viện hiện đại <br /> Dịch vụ chuẩn quốc tế</a>
                             </span>
                         </span>
                     </h3>
