--- a/WebAppService/Views/Shared/_ClientMenu.cshtml
+++ b/WebAppService/Views/Shared/_ClientMenu.cshtml
@@ -110,7 +110,7 @@
                             </ul>
                         </li>
                         <li class="menu-item-has-children">
-                            <a href="/Service/ServiceList" class="text-menu">Dịch Vụ Đặc Biệt</a>
+                            <a href="/DichVuDacBiet/DichVuDacBiet" class="text-menu">Dịch Vụ Đặc Biệt</a>
                             <ul class="sub-menu font-small" id="menuDichVuDacBiet">
                             </ul>
                         </li>
