--- a/WebAppService/Views/Shared/_Footer.cshtml
+++ b/WebAppService/Views/Shared/_Footer.cshtml
@@ -8,9 +8,16 @@
                             <div class="footer-logo mb-20">
                                 <img src="~/web/images/Group.png" alt="Sun Medical Center" height="50" />
                             </div>
-
                             <p class="footer-desc m-0">
                                 Mang đến dịch vụ y tế chất lượng cao với đội ngũ bác sĩ chuyên môn giỏi, trang thiết bị hiện đại và quy trình chăm sóc tận tâm. Chúng tôi cam kết bảo vệ sức khỏe của bạn và gia đình, cung cấp giải pháp y tế toàn diện từ phòng ngừa đến điều trị, giúp bạn an tâm và khỏe mạnh mỗi ngày.
+                            </p>
+                            <div class="footer-desc m-0">
+                                <p style="font-family: 'Montserrat';font-style: normal;font-weight: 600;font-size: 13px;color: #000000;margin:0">
+                                    Địa chỉ phòng khám
+                                </p>
+                            </div>
+                            <p class="footer-desc m-0">
+                                Tòa nhà Times Tower, 35 Đ. Lê Văn Lương, Nhân Chính, Thanh Xuân, Hà Nội
                             </p>
                             <div class="social-icons mt-20">
                                 <a href="#" class="social-box fb"><i class="fab fa-facebook-f"></i></a>
@@ -34,21 +41,17 @@
                 <div class="col-sm-2 col-6 mb-30">
                     <ul class="float-left mr-30 font-medium">
                         <li class="cat-item cat-item-2 text-c-10" style="font-weight:bold;margin-bottom:20px"><a href="category.html">Hỗ trợ</a></li>
-                        <li class="cat-item cat-item-3 text-c-9"><a href="#">Về chúng tôi</a></li>
-                        <li class="cat-item cat-item-4 text-c-9"><a href="#">Dịch vụ</a></li>
-                        <li class="cat-item cat-item-5 text-c-9"><a href="#">Đặt lịch</a></li>
-                        <li class="cat-item cat-item-6 text-c-9"><a href="#">Tìm bác sĩ</a></li>
-                        <li class="cat-item cat-item-7 text-c-9"><a href="#">Điều khoản</a></li>
+                        <li class="cat-item cat-item-3 text-c-9"><a href="#">Trung tâm hỗ trợ</a></li>
+                        <li class="cat-item cat-item-4 text-c-9"><a href="#">Dịch vụ 24/7</a></li>
+                        <li class="cat-item cat-item-5 text-c-9"><a href="#">Chat với chúng tôi</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-2 col-6">
                     <ul class="float-left mr-30 font-medium">
                         <li class="cat-item cat-item-2 text-c-10" style="font-weight:bold;margin-bottom:20px"><a href="category.html">Liên hệ</a></li>
-                        <li class="cat-item cat-item-3 text-c-9"><a href="#">Về chúng tôi</a></li>
-                        <li class="cat-item cat-item-4 text-c-9"><a href="#">Dịch vụ</a></li>
-                        <li class="cat-item cat-item-5 text-c-9"><a href="#">Đặt lịch</a></li>
-                        <li class="cat-item cat-item-6 text-c-9"><a href="#">Tìm bác sĩ</a></li>
-                        <li class="cat-item cat-item-7 text-c-9"><a href="#">Điều khoản</a></li>
+                        <li class="cat-item cat-item-3 text-c-9"><a href="#">+1826535375535</a></li>
+                        <li class="cat-item cat-item-4 text-c-9"><a href="#">+1843228662422</a></li>
+                        <li class="cat-item cat-item-5 text-c-9"><a href="#">call@sunmedical.com</a></li>
                     </ul>
                 </div>
             </div>
