--- a/WebAppService/Views/Shared/_Layout.cshtml
+++ b/WebAppService/Views/Shared/_Layout.cshtml
@@ -39,8 +39,7 @@
         </header>
         <!-- Main Wrap Start -->
         <main class="position-relative">
-            <img src="~/src/image_figma/Vector_2.png" class="orange-top" alt="orange-top" />
-            <img src="~/src/image_figma/Vector_3.png" class="orange-bottom" alt="orange-bottom" />
+            <img src="~/src/image_figma/group.png" class="orange-top" alt="orange-top" />
             @RenderBody()
         </main>
         <!-- Footer Start-->
