--- a/WebAppService/Views/Home/Index - Copy (2).cshtml
+++ b/WebAppService/Views/Home/Index - Copy (2).cshtml
@@ -37,10 +37,9 @@
               init: function(){
                   myClient.LoadData();
               },
-           
-              LoadData: function () {
+               LoadData: function () {
                   $.ajax({
-                       url: '/Home/LoadDataBefore',
+                      url: '/Home/LoadData',
                       type: "GET",
                       dataType: "json",
                       success: function (data) {
@@ -54,49 +53,133 @@
                               {
                                   $('#_layout2').html(lstData.record2.noiDung);
                               }
-                               myClient.LoadData2();
+                              if (lstData.listData != null) {
+                                  var template = doT.template($("#news-template").html());
+                                  $("#sp_sv").html(template({ newsList: lstData.listData }));
+                              }
+
+                               if (lstData.record3.length > 0) {
+                                  var template = doT.template($("#news-templatem").html());
+                                  $("#list_bai_viet0").html(template({ newsListm: lstData.record3 }));
+                              }
+                              if (lstData.record4.length > 0) {
+                                  var template = doT.template($("#news-templatex").html());
+                                  $("#original-articles").html(template({ newsListx: lstData.record4 }));
+                              }
+                               if (lstData.record5.length > 0) {
+                                  var template = doT.template($("#news-templatevm").html());
+                                  $("#list_bai_viet1").html(template({ newsListvm: lstData.record5 }));
+                              }
+                              if (lstData.record6.length > 0) {
+                                  var template = doT.template($("#news-templatevx").html());
+                                  $("#original-article1").html(template({ newsListvx: lstData.record6 }));
+                              }
                           }
                       }
                   });
               },
-              LoadData2: function () {
-                   $.ajax({
-                       url: '/Home/LoadDataAfter',
-                       type: "GET",
-                       dataType: "json",
-                       success: function (data) {
-                           if (data.status == true) {
-                               var lstData = data.viewModel;
-                               if (lstData.listData != null) {
-                                   var template = doT.template($("#news-template").html());
-                                   $("#sp_sv").html(template({ newsList: lstData.listData }));
-                               }
-                                if (lstData.record3.length > 0) {
-                                   var template = doT.template($("#news-templatem").html());
-                                   $("#list_bai_viet0").html(template({ newsListm: lstData.record3 }));
-                               }
-                               if (lstData.record4.length > 0) {
-                                   var template = doT.template($("#news-templatex").html());
-                                   $("#original-articles").html(template({ newsListx: lstData.record4 }));
-                               }
-                                if (lstData.record5.length > 0) {
-                                   var template = doT.template($("#news-templatevm").html());
-                                   $("#list_bai_viet1").html(template({ newsListvm: lstData.record5 }));
-                               }
-                               if (lstData.record6.length > 0) {
-                                   var template = doT.template($("#news-templatevx").html());
-                                   $("#original-article1").html(template({ newsListvx: lstData.record6 }));
-                               }
-                           }
-                       }
-                   });
-               },
         };
        myClient.init();
     </script>
 }
-
-<div id="_layout1" class="d-none"></div>
+<div class="col-lg-8 col-md-12">
+    <!-- Featured posts -->
+    <div class="featured-post mb-50">
+        <h4 class="widget-title mb-30">Today <span>Highlight</span></h4>
+        <div class="featured-slider-1 border-radius-10">
+            <div class="featured-slider-1-items">
+                <div class="slider-single p-10">
+                    <div class="img-hover-slide border-radius-15 mb-30 position-relative overflow-hidden">
+                        <span class="top-right-icon bg-dark"><i class="mdi mdi-camera-alt"></i></span>
+                        <a href="single.html">
+                            <img src="assets/imgs/news-8.jpg" alt="post-slider">
+                        </a>
+                    </div>
+                    <div class="pr-10 pl-10">
+                        <div class="entry-meta mb-30">
+                            <a class="entry-meta meta-0" href="category.html"><span class="post-in background1 text-danger font-x-small">Economy</span></a>
+                            <div class="float-right font-small">
+                                <span><span class="mr-10 text-muted"><i class="fa fa-eye" aria-hidden="true"></i></span>5.8k</span>
+                                <span class="ml-30"><span class="mr-10 text-muted"><i class="fa fa-comment" aria-hidden="true"></i></span>2.5k</span>
+                                <span class="ml-30"><span class="mr-10 text-muted"><i class="fa fa-share-alt" aria-hidden="true"></i></span>125k</span>
+                            </div>
+                        </div>
+                        <h4 class="post-title mb-20"><a href="#">‘People Are Getting in Planes’: The Travel Business Is Picking Up</a></h4>
+                        <div class="mb-20 overflow-hidden">
+                            <div class="entry-meta meta-2 float-left">
+                                <a class="float-left mr-10 author-img" href="author.html" tabindex="0"><img src="assets/imgs/authors/author.png" alt=""></a>
+                                <a href="author.html" tabindex="0"><span class="author-name text-grey">B. Johnathan</span></a>
+                                <br>
+                                <span class="author-add color-grey">Maidstone, Kent</span>
+                            </div>
+                            <div class="float-right">
+                                <a href="single.html" class="read-more"><span class="mr-10"><i class="fa fa-thumbtack" aria-hidden="true"></i></span>Picked by Editor</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="slider-single pt-10 pl-10 pr-10 pb-10">
+                    <div class="img-hover-slide border-radius-15 mb-30 position-relative overflow-hidden">
+                        <span class="top-right-icon bg-dark"><i class="mdi mdi-flash-on"></i></span>
+                        <a href="single.html">
+                            <img src="assets/imgs/slide-1.jpg" alt="post-slider">
+                        </a>
+                    </div>
+                    <div class="pr-10 pl-10">
+                        <div class="entry-meta mb-30">
+                            <a class="entry-meta meta-0" href="category.html"><span class="post-in background2 text-primary font-x-small">Technology</span></a>
+                            <div class="float-right font-small">
+                                <span><span class="mr-10 text-muted"><i class="fa fa-eye" aria-hidden="true"></i></span>5.8k</span>
+                                <span class="ml-30"><span class="mr-10 text-muted"><i class="fa fa-comment" aria-hidden="true"></i></span>2.5k</span>
+                                <span class="ml-30"><span class="mr-10 text-muted"><i class="fa fa-share-alt" aria-hidden="true"></i></span>125k</span>
+                            </div>
+                        </div>
+                        <h4 class="post-title mb-20"><a href="#">NASA Picks Moon Lander Designs by Elon Musk and Jeff Bezos Rocket Companies</a></h4>
+                        <div class="mb-20 overflow-hidden">
+                            <div class="entry-meta meta-2 float-left">
+                                <a class="float-left mr-10 author-img" href="author.html" tabindex="0"><img src="assets/imgs/authors/author-1.png" alt=""></a>
+                                <a href="author.html" tabindex="0"><span class="author-name text-grey">Steven Keni</span></a>
+                                <br>
+                                <span class="author-add color-grey">Maidstone, Kent</span>
+                            </div>
+                            <div class="float-right">
+                                <a href="single.html" class="read-more"><span class="mr-10"><i class="fa fa-thumbtack" aria-hidden="true"></i></span>Picked by Editor</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+@* <div id="_layout1"></div> *@
+@* <div class="entry-header entry-header-2 mt-0 text-center" id="LayoutHome1">
+    <div class="position-relative layout-home">
+        <div class="container d-flex flex-column p-0">
+            <div class="author-bio border-radius-10 p-30 mb-40  justify-content-center">
+                <div class="col-sm-7 author-info d-flex flex-column justify-content-center">
+                    <h3>
+                        <span class="vcard author">
+                            <span class="fn">
+                                <a href="author.html" title="" rel="author" class="author-info-text">Bệnh viện hiện đại Dịch vụ chuẩn quốc tế</a>
+                            </span>
+                        </span>
+                    </h3>
+                    <div class="author-info-small-text">
+                        Ứng dụng công nghệ tiên tiến, đội ngũ y bác sĩ hàng đầu, cam kết mang đến trải nghiệm chăm sóc sức khỏe toàn diện và chất lượng quốc tế
+                    </div>
+                    <div class="mt-10">
+                        <a href="#" class="main-menu d-none d-lg-inline btn-orrange">Xem thêm</a>
+                    </div>
+                </div>
+                <div class="col-sm-5 mb-30 car_img_circle">
+                    <div class="author-img-circle">
+                        <a href="author.html"><img src="/root/doctor1 1.png" alt="" class="avatar"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div> *@
 <!-- Hộp nổi dịch vụ -->
 <div class="floating-box-wrapper">
     <div class="floating-box container col-12 row">
